--- a/Creditz-Angular-src/app/reset-password/reset-password.component.css
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.css
@@ -15,6 +15,23 @@
     cursor: pointer;
     width: 100%;
   }
+  .validate-input {
+    position: relative;
+  }
+  
+  .input100 {
+    font-family: Poppins-Medium;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #666666;
+  
+    display: block;
+    width: 100%;
+    background: #e6e6e6;
+    height: 50px;
+    border-radius: 25px;
+    padding: 0 30px 0 68px;
+  }
   button:hover {
     opacity: 0.8;
   }
@@ -74,7 +91,7 @@
     cursor: not-allowed;
   }
   
-  input[type=text], input[type=password] {
+  input[type=text], input[type=password],input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -91,32 +108,12 @@
 .row{
   text-align: center;
   }
-  .input-group {
-    display: flex;
-    width: 100%;
-    margin-bottom: 15px;
-    /* position: fixed; */
-  }
-  .form-control {
-    width:100%;
-    padding: 10px;
-    outline: none;
-  }
-  .icon {
-  padding: 10px;
-  background: dodgerblue;
-  color: white;
-  min-width: 20px;
-  text-align: center;
-}
   
-  .form-control:focus {
-    border: 2px solid dodgerblue;
-  }
   body, html {
     height: 80%;
     font-family: Poppins-Regular, sans-serif;
   }
+
 
 .container-login100 {
     width: 50%;
@@ -143,12 +140,24 @@
   z-index: 1;
   margin-bottom: 5%;
 }
+
+div.form{
+display:block;
+text-align:center;
+}
+form{
+  display:inline-block;
+  margin-left:auto;
+  margin-right:auto;
+  /* text-align:left; */
+}
+
 .limiter {
     width: 80%;
     margin: 0 0;
   }
   .wrap-login100 {
-    width:80%;
+    width:100%;
     background: #fff;
     /* border-radius: 10%; */
     overflow: hidden;
