--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -3,52 +3,48 @@
 <div class="limiter" style=" margin-left:12%;" align="center">
 				<div class="container-login100">
 				<div class="wrap-login100">
-                 <div class="text-center">
-                        <h3> <img src="assets\forget-password.jpg "alt="IMG" class="image" ></h3>
-                        <!-- <h2 class="text-center"><i class="glyphicon glyphicon-lock" style="font-size:2em;"></i></h2> -->
+                 <div class="form">
+                       
+                  <h3> <img src="assets\forget-password.jpg "alt="IMG" class="image" ></h3>
                         <div class="panel-body">
-                         <form #personForm="ngForm" (ngSubmit)="onSubmitForm()" nonvalidate style="padding-left:38%">
-                            <div class="form-group">
-                                <div class="input-group">
-                                  <!-- <i class="fa fa-envelope icon color-blue"></i> -->
-                                  <input  type="email"   #email="ngModel"  id="email" name="email"
-                                   placeholder="email address" class="form-control"  type="email"
+                         <form #personForm="ngForm" class="login100-form "(ngSubmit)="onSubmitForm()" nonvalidate style="padding-left:38%">
+                           
+                                <div class="wrap-input100">
+                                  
+                                  <input  type="email"  
+                                  #email="ngModel"  id="email" name="email"
+                                 
+                                  class="input100"  type="email"
                                   (change)="emailCheckUnique()"
                                   pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                   [class.is-invalid]="email.invalid && email.touched"
-                                  placeholder="Enter email" name="pemail" 
-                                  [(ngModel)]="userModel1.userEmail" required>
-                                  
+                                  name="pemail" 
+                                  [(ngModel)]="userModel1.userEmail"
+                                  placeholder="Email Address" 
+                                  required>
+                                  <br>
+
                                   <div *ngIf="email.invalid && (email.dirty || email.touched)"
                                   class="text-danger">
                                   
                                   <small *ngIf="email.errors.pattern">
-                                               Enter the mail following the email format.
+                                               Enter the mail in the email format.
                                   </small> 
                                   <small *ngIf="email.errors.required">
-                                                 This field cannot be empty,email is required.
+                                                Email is required.
                                   </small> 
 
                                   <div *ngIf="emailAlreadyExist!=''" class="text-danger">
                                     <small>{{emailAlreadyExist}} </small>
-                                
-                                </div>
                                   </div>
-              
-                                 
-                               <br>
                                 </div>
                             </div>
+                               
                            
-                            <div class="form-group">
                             
-                                <div class="input-group">
-                                    <!-- <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-lock"></i>
-                                    </span> -->
-                                            <!-- <i class="glyphicon glyphicon-lock"></i> -->
+                                <div class="wrap-input100 ">
                                             <input type="password" 
-                                            class="form-control"
+                                            class="input100"
                                             #oldpassword="ngModel" 
                                             pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" 
                                             [class.is-invalid]="oldpassword.invalid && oldpassword.touched"
@@ -56,79 +52,70 @@
                                             required id="t4"
                                             [(ngModel)]="userModel2.password"
                                             placeholder="Old Password" >
+                                            <br>
                                             <div *ngIf="oldpassword.invalid && (oldpassword.dirty || oldpassword.touched)"
                                             class="text-danger">
                                             <small *ngIf="oldpassword.errors.required">
-                                            This field cannot be empty,Old Password is required.
+                                            Old Password is required.
                                             </small>
-                                              
                                             </div>
-                                            <br>
+                                            
                                 </div>
-                                
-                            </div>
-                        <div class="form-group">
+                          
                             
-                                    <div class="input-group">
-                                        <!-- <span class="input-group-addon">
-                                            <i class="glyphicon glyphicon-lock"></i>
-                                        </span>
-                                              -->
+                                <div class="wrap-input100">
+                                       
                                                 <input type="password" 
                                                 #password="ngModel" 
-                                                class="form-control"
+                                                class="input100"
                                                 pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" 
                                                 [class.is-invalid]="password.invalid && password.touched"
                                                 name="psw" 
                                                 [(ngModel)]="userModel1.password" 
                                                 required id="t3"
                                                 placeholder=" New Password">
+                                                <br>
                                                 <div *ngIf="password.invalid && (password.dirty || password.touched)"
                                                 class="text-danger">
                                                 <small *ngIf="password.errors.required">
-                                                This field cannot be empty ,New Password is required.
+                                                New Password is required.
                                                 </small>
                                                 <small *ngIf="password.errors.pattern">
-                                                At least 8 characters in length,Lowercase letters,Uppercase letters,Numbers,Special characters.
+                                                At least 8 characters in length.
                                                 </small>      
                                                 </div>
-                                                <br>
+                                               
                                     </div>
                                     
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <!-- <span class="input-group-addon">
-                                            <i class="glyphicon glyphicon-lock"></i>
-                                        </span> -->
+                               
+                                    <div class="wrap-input100 ">
+    
                                         <input type="password" 
-                    class="form-control" 
-                    id="t4" 
-                    placeholder="Repeat password"
-                    #confirmpassword="ngModel" 
-                    appConfirmEqualValidator="psw"  
-                    [class.is-invalid]="confirmpassword.invalid && confirmpassword.touched && confirmpassword.errors?.notEqual" 
-                    name="cpsw" 
-                    ngModel required>
-                   
-                    <div *ngIf="confirmpassword.invalid && (confirmpassword.dirty || confirmpassword.touched)"
-                    class="text-danger">
-                    <small *ngIf="confirmpassword.errors.required">
-                     Password is required to enter again.
-                    </small>
-                    <small *ngIf=" confirmpassword.errors?.notEqual">password and confirmpassword does not match.
-                    </small>      
-                    </div>
-                    <br>
-                    </div>
+                                         class="input100" 
+                                         id="t4" 
+                                         placeholder="Repeat password"
+                                         #confirmpassword="ngModel" 
+                                         appConfirmEqualValidator="psw"  
+                                         [class.is-invalid]="confirmpassword.invalid && confirmpassword.touched && confirmpassword.errors?.notEqual" 
+                                         name="cpsw" 
+                                         ngModel required>
+                                        <br>
+
+                                        <div *ngIf="confirmpassword.invalid && (confirmpassword.dirty || confirmpassword.touched)"
+                                        class="text-danger">
+          
+                                       <small *ngIf=" confirmpassword.errors?.notEqual">password and confirmpassword does not match.
+                                      </small>      
+                                      </div>
+                                      </div>
                                     
-                                </div>
+                               
                                 <div class="container-login100-form-btn">
                                     <button type="submit"[disabled]="personForm.form.invalid||emailAlreadyExist!=''" class="login100-form-btn">Reset </button>
                                 </div>
                             </form>
 
-                        </div>
+                          </div>
                    
                 
             
