corrected the form

--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -3,18 +3,18 @@
 <div class="limiter" style=" margin-left:12%;" align="center">
 				<div class="container-login100">
 				<div class="wrap-login100">
-                 <div class="form">
+                 <div class="form" style="margin-left:20%;" align="center">
                        
                   <h3> <img src="assets\forget-password.jpg "alt="IMG" class="image" ></h3>
-                        <div class="panel-body">
-                         <form #personForm="ngForm" class="login100-form "(ngSubmit)="onSubmitForm()" nonvalidate style="padding-left:38%">
+                        <div>
+                         <form #personForm="ngForm" class="form-group "(ngSubmit)="onSubmitForm()" nonvalidate align="center" >
                            
                                 <div class="wrap-input100">
                                   
                                   <input  type="email"  
                                   #email="ngModel"  id="email" name="email"
                                  
-                                  class="input100"  type="email"
+                                  class="form-control"  type="email"
                                   (change)="emailCheckUnique()"
                                   pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                   [class.is-invalid]="email.invalid && email.touched"
@@ -44,7 +44,7 @@
                             
                                 <div class="wrap-input100 ">
                                             <input type="password" 
-                                            class="input100"
+                                            class="form-control"
                                             #oldpassword="ngModel" 
                                             pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" 
                                             [class.is-invalid]="oldpassword.invalid && oldpassword.touched"
@@ -67,7 +67,7 @@
                                        
                                                 <input type="password" 
                                                 #password="ngModel" 
-                                                class="input100"
+                                                class="form-control"
                                                 pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" 
                                                 [class.is-invalid]="password.invalid && password.touched"
                                                 name="psw" 
@@ -91,7 +91,7 @@
                                     <div class="wrap-input100 ">
     
                                         <input type="password" 
-                                         class="input100" 
+                                         class="form-control" 
                                          id="t4" 
                                          placeholder="Repeat password"
                                          #confirmpassword="ngModel" 
@@ -119,7 +119,7 @@
                    
                 
             
-            <div class="row" style="padding-left:37%">
+            <div class="row">
                 <div class="col-md-12">
                  New user? <a href="/register">Register</a><br>
                  Already registered?<a href="/login">Login</a>
