--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 5%;">
   <img src="assets/farm.jpg" alt="IMG" style="width:100%; margin-top:-2%">
 
 <mat-horizontal-stepper linear #stepper class="centered"> 
