--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -1,7 +1,7 @@
-<div class="container" style="margin-top: 5%;">
-  <img src="assets/farm.jpg" alt="IMG" style="width:100%; margin-top:-2%">
+<div class="container" style="margin-left: 9%;" *ngIf="this.storeRole=='Organization' and this.store!=null">
+  <img src="assets/farm.jpg" alt="IMG" style="width:112.5%; margin-top:-2%">
 
-<mat-horizontal-stepper linear #stepper class="centered"> 
+<mat-horizontal-stepper linear #stepper class="centered" style="margin-left: 54%; margin-top:-39.5%"> 
   <mat-step [stepControl]="firstFormGroup" >
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>Your Credit Details</ng-template>
@@ -104,112 +104,6 @@
 </mat-horizontal-stepper>
 
 </div>
-
-
-
-
-<!--
-
-
-
-<div *ngIf="this.storeRole=='Person' and this.store!=null" style="margin-left:22%">
-  <div class="limiter">
-<mat-dialog-content>
-          <H1 mat-dialog-title class=".login100-form-title " aTilt>   Your Credit Details</H1><br>
-
-      <div class="wrap-login100">
-
-
-
-              <form #application="ngForm" (ngSubmit)="apply()" method="POST" class="login100-form validate-form" style="border:none;" >
-                  
-                      <div class="wrap-input100">
-                        <input 
-                        matTooltip="Enter your PAN"	matTooltipPosition="after"
-                        type="text" placeholder="Pan Card - AAAAA1234A" class="input100" name="pancard" [(ngModel)]="applicationModel.pancard" required>
-                        <span class="focus-input100"></span>
-                      </div>
-
-                          <div class="wrap-input100">
-                        <input 
-                        matTooltip="Enter your Loan Amount"	matTooltipPosition="after"
-                        type="number" placeholder="Loan Amount Required" class="input100" name="loanAmount" [(ngModel)]="applicationModel.loanAmount" required>
-                              <span class="focus-input100"></span>
-                      </div>
-
-                          <div class="wrap-input100">
-                        <input 
-                        matTooltip="Enter your Age"	matTooltipPosition="after"
-                        type="number" placeholder="Your Age" class="input100" name="age" [(ngModel)]="applicationModel.age" required>
-                              <span class="focus-input100"></span>
-                      </div>
-              
-                      <div class="wrap-input100">
-                        <input 
-                        matTooltip="Enter your Occupation"	matTooltipPosition="after"
-                        type="text" placeholder="Your Occupation" class="input100" name="occupation" [(ngModel)]="applicationModel.occupation" required>
-                              <span class="focus-input100"></span>
-                      </div>
-
-                      <div class="wrap-input100">
-                        <input 
-                        matTooltip="Enter your Repayment Duration"	matTooltipPosition="after"
-                        type="number" placeholder="Duration of Repayment- in Months" class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
-                              <span class="focus-input100"></span>
-                      </div>
-
-                      <div class="wrap-input100">   
-                          <label style="margin:20px">  Enter your Gender: </label><br>
-                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Male" style="margin:15px">  Male  <br>
-                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Female" style="margin:15px">  Female <br>
-                              <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Other" style="margin:15px">  Other
-                              <span class="focus-input100"></span>
-                      </div>
-
-                      <div class="wrap-input100">   
-                          <label style="margin:20px">  Do you have any past criminal records: </label><br>
-                              <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <br>
-                              <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=1 style="margin:15px">  Yes <br>
-                              <span class="focus-input100"></span>
-                      </div>
-
-                      <div class="wrap-input100">   
-                          <label style="margin:20px">  Are you Bankrupt: </label><br>
-                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <br>
-                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
-                              <span class="focus-input100"></span>
-                      </div>
-
-                  <br>
-                      <div class="container-login100-form-btn" >
-                        <button type="submit" class="login100-form-btn"  [disabled]="application.form.invalid">Apply</button>
-                      </div>
-
-          </form>
-
-  </div>
-  </mat-dialog-content>
- 
-  </div>
-
-
-</div>
-
-<div *ngIf="this.store==null">
-  <mat-dialog-content>
-<app-login></app-login>
-  </mat-dialog-content>
-</div>
-
-<div *ngIf="this.store!=null && this.storeRole=='Organization'">
-
-  <span style="font-style: normal;font-size: x-large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">sorry !!!!!! Need to log out. you are not organizational user.... </span>
-   </div>
-
-
--->
-
-
 
 <div *ngIf="this.store==null">
 <app-login></app-login>
