--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -17,10 +17,6 @@
       </li>
 
 
-      <!--<li class="nav-item">
-        <a class="nav-link" href="faq" >  FAQ  </a>
-      </li> -->
-
      <li class="dropdown" >
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="policy">  Our Policies  </a>
           <div class="dropdown-menu" aria-labelledby="policy">
@@ -40,56 +36,14 @@
       </li>  
 
       <li class="nav-item" *ngIf="this.store!=null">
-        <a class="nav-link" (click)="logout()" >  logout  </a>
+        <a class="nav-link" (click)="logout()" >  Logout  </a>
       </li>
-
-      <!-- <li class="nav-item" *ngIf="this.store!=null && this.role=='Organization'">
-        <a class="nav-link" (click)="applicationStatus()" >  Application Status</a>
-      </li> -->
-
 
     </ul>
   <form class="form-inline my-2 my-lg-0" >
 <div style="max-width:50" *ngIf="showInHeader()">
-<!--<img src="./assets/profile.png" (click)="openProfileDialog()">-->
 <button class="profileButton" (click)="openProfileDialog()"></button>
 </div>
     </form>
   </div>
 </nav> 
-<!--
-<nav class="navbar navbar-expand-lg bg-primary">
-  <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown" >
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
--->
