--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,4 +1,4 @@
-<div style="max-width:50">
+<div style="max-width:50" *ngIf="this.role!='Admin' or this.role!='financial-analyst' ">
 <button class="birdButton" (click)="goToUrl('individual-user/individual-user-application')">Apply Here</button>
 </div>
 
@@ -19,20 +19,17 @@
                     <div class="row row2col">
                         <div class="col-md-6 col-left">
                             <p  style="color:white;"> 
-                              <i>With an intrest rate of 11.5% we provide loans on flat EMis, we help you shape your dreams, ideas and any startup plans into reality<br><br>
-                              We beleive in giving the cosumers a great ecperience, henceforth, we provide you the loan without security, 
-                              'un-secured' loans, is our policy to help our consumers to have an amzing loaning experiance<br><br>
-                              We beleive in you!!!<br><br>
-                              Allow us help you in building your own empire, give us chance.<br><br> Apply for the loan <i>Now!!!</i></i><br><br>
+                              <i>With an interest rate of 11.5% we provide loans on flat EMI's, we help you shape your dreams, ideas and any startup plans into reality<br><br>
+                              We believe in giving the consumers a great experience, henceforth, we provide you the loan without security, 'unsecured' loans, is our policy to help our consumers to have an amazing loaning experience<br><br>
+                              We believe in you!!!<br><br>
+                           Allow us to help you in building your empire; give us a chance.<br><br> Apply for the loan<i> Now!!!</i></i><br><br>
 
                             </p>
                         </div>
                         <div class="col-md-6 col-right">
                             <p  style="color:white;">     
-                            <i>We have a very easy but effective screening policy, we wont bother you with too many documents, we just need a pan card information
-                            for your application procedure, nad then we will send you an email regarding your application status, once you had received the email,
-                            for the next process, you just to visit your nearby branch And Voila! you are ready to go, to build your own buisness dynasty!<br><br>
-                            do not forget to Check your Emi by before Applying! because we care about your credit score!</i><br><br>
+                            <i>We have a straightforward but effective screening policy; we won't bother you with too many documents, we need a pan card information for your application procedure, and then we will send you an email regarding your application status, once you had received the email, for the next process, you have to visit your nearby branch And Voila! You are ready to build your dynasty!<br><br>
+                           Do not forget to Check your Emi by before Applying! Because we care about your credit score!</i><br><br>
                             </p>
                             <p  style="color:white;"><i>Happy Loaning!</i></p>
                         </div>
@@ -43,23 +40,8 @@
         </section>
     </div>
 
-
-<!--===========================================================-->
-
-
-
-
-
-
-
-<!--===========================================================-->
-
 			</div>
 
- <!--  <div class="container-login100-form-btn" >
-      <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Here!</button>
-    </div>
--->
 </div>
 
 <div style=" display:block; float: left; max-width:25%; margin-left:5%" >
@@ -75,15 +57,28 @@
 					<img src="assets/brains2.png" alt="IMG"  style="width:100%;height:100%; "> <br><br>
 				</div>
 
-   <div class="wrap-input100" >
+   <div class="wrap-input100">
       <input type="number" class="input100" placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
  						<span class="focus-input100"></span>
+             <span [matTooltip] *ngIf="greaterThan(calculatorModel.principle,150000)">
+                The maximum amount is Rs. 15Lakhs.
+             </span>
+            <span [matTooltip] *ngIf="lessThan(calculatorModel.principle,10000)">
+                The minimum acceptable amount is Rs. 10 Thousands.
+             </span>
     </div>
 
 
     <div class="wrap-input100" >
       <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure>
   						<span class="focus-input100"></span>
+             <span [matTooltip] *ngIf="greaterThan(calculatorModel.tenure,100)">
+                The maximum acceptable tenure is 100 Months.
+             </span>
+            <span [matTooltip] *ngIf="lessThan(calculatorModel.principle,3)">
+                The minimum acceptable tenure is 3 Months.
+             </span>
+
     </div>
 
     <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
